tests/ui/minus-string.stderr
error[E0600]: cannot apply unary operator `-` to type `String`
  --> $DIR/minus-string.rs:1:13
   |
LL | fn main() { -"foo".to_string(); }
   |             ^^^^^^^^^^^^^^^^^^ cannot apply unary operator `-`
   |
note: the foreign item type `String` doesn't implement `Neg`
  --> $SRC_DIR/alloc/src/string.rs:LL:COL
   |
   = note: not implement `Neg`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0600`.
