tests/ui/minus-string.rs
fn main() { -"foo".to_string(); } //~ ERROR cannot apply unary operator `-` to type `String`
